tests/NormalTests/paczka2/big_fuzzy/35429861.err
Error in line 13: S509 S571 35,17
Error in line 21: S509 S571 153,9
Error in line 10: 4qQYmZ S571 54,2
Error in line 20: jyqNYuc S180 73,9
Error in line 29: ECw S509 51,5
Error in line 31: jyqNYuc S509 -1,1
Error in line 22: zuiU5a2ThZ S509 26,7
Error in line 39: S509 S571 47,6
Error in line 40: S509 A803 73,3
Error in line 45: jKCJrW S571 38,2
Error in line 48: ECw S571 1,9
Error in line 58: 4qQYmZ S571 2,0
Error in line 47: S509 S509 32,9
Error in line 65: 4qQYmZ S509 119,0
Error in line 69: mL1FT S509 34,4
Error in line 85: S509 A803 51,1
Error in line 87: S509 S180 75,5
Error in line 89: jyqNYuc A803 2,5
Error in line 98: jKCJrW S509 95,5
Error in line 103: jyqNYuc S509 15,30
Error in line 113: 4qQYmZ S180 40,2
Error in line 121: S509 A803 79,5
Error in line 129: jKCJrW S|09 113,2
Error in line 124: zuiU5a2ThZ S180 8,3
Error in line 130: zuiU5a2ThZ S571 14,8
Error in line 109: jyqNYuc S509 9,7
Error in line 139: ECw S180 70,75
Error in line 140: ECw S180 218,6
Error in line 137: jKCJrW S509 262,3
Error in line 150: ECw S509 90,0
Error in line 155: ECw A803 65,9
Error in line 160: zuiU5a2ThZ S571 81,3
Error in line 166: S509 S180 59,2
Error in line 169: jKCJrW S571 89,1
Error in line 175: jKCJrW S180 90,4
Error in line 177: mL1FT S180 76,9
Error in line 180: jKCJrW A803 74,8
Error in line 183: mL1FT S571 62,5
Error in line 199: S509 S509 93,5
Error in line 200: jKCJrW S571 95,4
Error in line 206: jKCJrW S180 45,8
Error in line 216: ECw S180 29,3
Error in line 219: 4qQYmZ S180 58,1
Error in line 218: ECw S509 2,7
Error in line 223: jKCJrW S180 8,9
Error in line 221: 4qQYmZ S571 72,7
